--- a/src/Table.css
+++ b/src/Table.css
@@ -6,11 +6,12 @@
   .table th,
   .table td {
     padding: 12px;
-    text-align: left;
+    text-align: center;
     vertical-align: middle;
   }
   
   .table th {
+    text-align: center;
     background-color: #f2f2f2;
     font-weight: bold;
     border-bottom: 2px solid #ddd;
